# grafana-backup-tool

./: .env  .gitignore  CHANGELOG.md  Dockerfile  DockerfileSlim  Makefile  NEWREADME.md  README.md  REFACTOR.md  backup_grafana.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-release.yml  release.yml
_deprecated/: restore_grafana.sh  setup.py
charts/grafana-backup-tool/: Chart.yaml  README.md  grafana-backup-tool-0.1.0.tgz  values.yaml
examples/: grafanaSettings.example.json
grafana_backup/: api_checks.py  archive.py  cli.py  commons.py  constants.py  create_dashboard.py  create_folder.py  dashboardApi.py  delete.py  delete_alert_channels.py  delete_dashboards.py  delete_folders.py  delete_library_elements.py  delete_team_members.py  delete_teams.py  grafanaSettings.py  make_users_viewers.py  pause_alerts.py  restore.py  restore_user_permissions.py  save.py  save_alert_channels.py  save_alert_rules.py  save_contact_points.py  save_dashboard_versions.py  save_dashboards.py  save_folders.py  save_library_elements.py  save_notification_policies.py  save_orgs.py  save_team_members.py  save_teams.py  save_users.py  tools.py  unpause_alerts.py  update_notification_policy.py
grafana_backup/components/: registry.py
grafana_backup/conf/: grafanaSettings.json
grafana_backup/create/: alert_rule.py  contact_point.py  folder.py
grafana_backup/delete/: delete.py
grafana_backup/providers/: __init__.py  (+4 more)
setup/: .env  prerequisites.py
tests/: .env  README.md  docker-compose.yaml  garage.toml  grafana_backup_tui.py  test_save_dashboards.py
(+7 files in other folders)
