[project]
name = "grafana-backup-tool"
version = "1.6.2"
description = "Backup tool for Grafana"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-core~=1.35.1",
    "azure-storage-blob~=12.28.0",
    "boto3~=1.40.40",
    "botocore~=1.40.40",
    "docopt~=0.6.2",
    "google-api-core~=2.29.0",
    "google-cloud-storage~=3.8.0",
    "influxdb~=5.3.2",
    "packaging~=24.2",
    "python-dotenv~=1.1.1",
    "questionary>=2.1.1",
    "requests~=2.32.5",
    "setuptools~=78.1.0",
]

[project.scripts]
grafana-backup = "grafana_backup.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grafana_backup"]
